# ReflectAndJniShare

./: .gitignore  README.md  settings.gradle
app/: build.gradle
app/src/androidTest/java/cn/liusiqian/reflectandjnishare/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/java/cn/liusiqian/reflectandjnishare/: MainActivity.java
app/src/main/res/values/: strings.xml
app/src/test/java/cn/liusiqian/reflectandjnishare/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
jnidemo/: CMakeLists.txt  build.gradle
jnidemo/src/androidTest/java/cn/liusiqian/jnidemo/: ExampleInstrumentedTest.java
jnidemo/src/main/: AndroidManifest.xml
jnidemo/src/main/cpp/: JNIEnvAttachHelper.cpp  JNIEnvAttachHelper.h  native.cpp  native.h
jnidemo/src/main/java/cn/liusiqian/jnidemo/: MainActivity.java  MyApplication.java  NativeErrorHandler.java
jnidemo/src/main/java/cn/liusiqian/jnidemo/utils/: PrimeCalcUtils.java
jnidemo/src/main/res/layout/: activity_main.xml
jnidemo/src/main/res/values/: strings.xml  styles.xml
jnidemo/src/test/java/cn/liusiqian/jnidemo/: ExampleUnitTest.java
reflect/: build.gradle
reflect/src/androidTest/java/cn/liusiqian/reflectdemo/: ExampleInstrumentedTest.java
reflect/src/main/: AndroidManifest.xml
reflect/src/main/java/cn/liusiqian/reflectdemo/: FileUtils.java  MainActivity.java
reflect/src/main/java/cn/liusiqian/reflectdemo/model/: AbsModel.java  AnnotationModel.java  BaseModel.java  MyAnnotation.java  SubModel.java
reflect/src/main/res/values/: strings.xml
reflect/src/test/java/cn/liusiqian/reflectdemo/: ExampleUnitTest.java
